04-middleware-headers.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: headers
spec:
  headers:
    browserXssFilter: true
    contentSecurityPolicy: upgrade-insecure-requests
    contentTypeNosniff: true
    customFrameOptionsValue: SAMEORIGIN
    referrerPolicy: same-origin
    stsSeconds: 63072000
    stsIncludeSubdomains: true
    stsPreload: true
    customResponseHeaders:
      X-Powered-By: ""
      Server: ""
