03-collabora-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: collabora
  name: collabora
spec:
  replicas: 1
  selector:
    matchLabels:
      app: collabora
  template:
    metadata:
      labels:
        app: collabora
    spec:
      containers:
        - image: collabora/code
          imagePullPolicy: Always
          name: collabora
          ports:
            - name: collabora
              containerPort: 9980
