03-confluence-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: confluence
  name: confluence
spec:
  replicas: 1
  selector:
    matchLabels:
      app: confluence
  template:
    metadata:
      labels:
        app: confluence
    spec:
      volumes:
        - name: confluence-data
          hostPath:
            path: /media/virtual/confluence-data
      containers:
        - image: atlassian/confluence-server:6.6.15
          imagePullPolicy: Always
          name: confluence
          ports:
            - name: tomcat
              containerPort: 8090
          volumeMounts:
            - name: confluence-data
              mountPath: /var/atlassian/application-data/confluence
