03-nextcloud-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nextcloud
  labels:
    app: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      volumes:
        - name: nextcloud-data
          hostPath:
            path: /media/virtual/nextcloud-data
      containers:
        - name: nextcloud
          image: nextcloud:19-apache
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 80
          volumeMounts:
            - name: nextcloud-data
              mountPath: /var/www/html
