03-plex-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name:  plex
  labels:
    app: plex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      volumes:
        - name: media
          hostPath:
            path: /media/nfs/media
        - name: config
          persistentVolumeClaim:
            claimName: config-pvc
        - name: transcode
          persistentVolumeClaim:
            claimName: transcode-pvc
      containers:
        - name: plex
          image: plexinc/pms-docker
          ports:
            - name: plex
              containerPort: 32400
          volumeMounts:
            - name: media
              mountPath: /data
            - name: config
              mountPath: /config
            - name: transcode
              mountPath: /transcode
