03-samba-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: smb-server
  name: smb-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smb-server
  template:
    metadata:
      labels:
        app: smb-server
    spec:
      volumes:
        - name: media
          hostPath:
            path: /media/nfs/media
      containers:
        - image: dperson/samba
          imagePullPolicy: Always
          name: smb-server
          ports:
            - name: netbios
              containerPort: 139
            - name: smb
              containerPort: 445
          volumeMounts:
            - name: media
              mountPath: /media
