01-services.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik
spec:
  ports:
    - name: web
      protocol: TCP
      port: 8000
    - name: admin
      protocol: TCP
      port: 8080
    - name: websecure
      protocol: TCP
      port: 4430
  selector:
    app: traefik
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  ports:
    - name: redis
      protocol: TCP
      port: 6379
  selector:
    app: redis
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
  selector:
    app: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
spec:
  ports:
    - name: web
      protocol: TCP
      port: 80
  selector:
    app: nextcloud
---
apiVersion: v1
kind: Service
metadata:
  name: confluence
spec:
  ports:
    - name: tomcat
      protocol: TCP
      port: 8090
  selector:
    app: confluence
---
apiVersion: v1
kind: Service
metadata:
  name: smb-server
spec:
  ports:
    - name: netbios
      protocol: TCP
      port: 139
    - name: smb
      protocol: TCP
      port: 445
  selector:
    app: smb-server
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: plex
spec:
  ports:
    - name: plex
      protocol: TCP
      port: 32400
  selector:
    app: plex
---
apiVersion: v1
kind: Service
metadata:
  name: kuub
spec:
  ports:
    - name: kuub
      protocol: TCP
      port: 80
  selector:
    app: kuub
