09-ingresses.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simpleingressroute
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`confluence.dotslashme.com`)
      kind: Rule
      services:
        - name: confluence
          port: 8090
      middlewares:
        - name: redirectscheme
    - match: Host(`nextcloud.dotslashme.com`) || Host(`storage.dotslashme.com`)
      kind: Rule
      services:
        - name: nextcloud
          port: 80
      middlewares:
        - name: redirectscheme
    - match: Host(`plex.dotslashme.com`)
      kind: Rule
      services:
        - name: plex
          port: 32400
      middlewares:
        - name: redirectscheme
    - match: Host(`traefik.dotslashme.com`)
      kind: Rule
      services:
        - name: traefik
          port: 8080
      middlewares:
        - name: redirectscheme
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroutetls
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`confluence.dotslashme.com`)
      kind: Rule
      services:
        - name: confluence
          port: 8090
          sticky:
            cookie:
              httpOnly: true
              secure: true
              name: confluence
      middlewares:
        - name: compress
        - name: headers
    - match: Host(`nextcloud.dotslashme.com`) || Host(`storage.dotslashme.com`)
      kind: Rule
      services:
        - name: nextcloud
          port: 80
          sticky:
            cookie:
              secure: true
              httpOnly: true
      middlewares:
        - name: compress
        - name: headers
    - match: Host(`plex.dotslashme.com`)
      kind: Rule
      services:
        - name: plex
          port: 32400
          sticky:
            cookie:
              secure: true
              httpOnly: true
      middlewares:
        - name: compress
        - name: headers
    - match: Host(`traefik.dotslashme.com`)
      kind: Rule
      services:
        - name: traefik
          port: 8080
          sticky:
            cookie:
              secure: true
              httpOnly: true
      middlewares:
        - name: auth
        - name: compress
        - name: headers
  tls:
    certResolver: myresolver
